--- a/company.html
+++ b/company.html
@@ -241,7 +241,7 @@
 					</div>
 					<div class="information">
 						<h4>Raw Material Cutting Facility</h4>
-						<p style="text-align:justify;"> - 300mm Bandsaw </br>- 500mm Bandsaw</br>&nbsp</p>
+						<p style="text-align:justify;"> - 300mm Bandsaw </br>- 500mm Bandsaw</p>
 					</div>
 				</div>
 				
