--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 									<div class="col-md-4 col-sm-4 tab-content-2">
 										<div class="tab-content">
 											<div class="tab-content-image">
-												<img src="images/Forged Semi Closed Die.jpg" alt="Forgewell Industries">
+												<img src="images/Forged Semi Closed Die (2).jpg" alt="Forgewell Industries">
 											</div>
 											<div class="tab-content-info">
 												<div class="tab-content-title">
