--- a/products.html
+++ b/products.html
@@ -184,7 +184,7 @@
 
 				<div class="col-md-4 col-sm-4 tools-part">
 					<figure class="effect-steve">
-						<a href="images/Hub.jpg" class="swipebox">
+						<a href="images/HUB.jpg" class="swipebox">
 							<img src="images/Hub.jpg" alt="Forgewell Industries" class="img-responsive" />
 							<figcaption>
 								<!--<h2>Hub</h2>-->
