--- a/products.html
+++ b/products.html
@@ -184,8 +184,8 @@
 
 				<div class="col-md-4 col-sm-4 tools-part">
 					<figure class="effect-steve">
-						<a href="images/HUB_forgewell.jpg" class="swipebox">
-							<img src="images/HUB_forgewell.jpg" alt="Forgewell Industries" class="img-responsive" />
+						<a href="images/HUB forgewell.jpg" class="swipebox">
+							<img src="images/HUB forgewell.jpg" alt="Forgewell Industries" class="img-responsive" />
 							<figcaption>
 								<!--<h2>Hub</h2>-->
 								<p>Hub</p>
