--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
 									<div class="col-md-4 col-sm-4 tab-content-3">
 										<div class="tab-content">
 											<div class="tab-content-image">
-												<img src="images/HUB forgewell.jpg" alt="Forgewell Industries">
+												<img src="images/forged hub.jpg" alt="Forgewell Industries">
 											</div>
 											<div class="tab-content-info">
 												<div class="tab-content-title">
