--- a/about.html
+++ b/about.html
@@ -212,7 +212,7 @@
 		<div class="container">
 			<div class="col-md-6 col-sm-6 graph-text">
 				<h3 style="color:#B94239">Financial Overview</h3>
-				<p style=" text-align:justify">Our first two quaters revenue was 75lac and then we grow consistently and exponentially in FY 2015-2016 we reach our revenue target of 450+lac. We deliver very critical and complex projects.
+				<p style=" text-align:justify">In 2010 our first two quaters revenue was 75 lakh and then we grow consistently and exponentially. We deliver very critical and complex projects. In FY 2015-2016 we reached our revenue target of 450+ lakh.
 				 We are financially strong enough to cater any size of project.</p>
 				<!--<p class="bottom">Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</p>-->
 			</div>
@@ -220,6 +220,7 @@
 			<div>
 				<div>
 					<canvas id="canvas" height="450" width="600"></canvas>
+					values in lakh
 				</div>
 			</div>
 			</div>
@@ -373,7 +374,7 @@
 	<script>
 		var randomScalingFactor = function(){ return Math.round(Math.random()*100)};
 		var lineChartData = {
-			labels : ["2010","2011","2012","2013","2014","2015"],
+			labels : ["FY 2010-11","2011-12","2012-13","2013-14","2014-15","2015-16"],
 			datasets : [
 				/*{
 					label: "My First dataset",
@@ -393,7 +394,7 @@
 					pointStrokeColor : "#fff",
 					pointHighlightFill : "#fff",
 					pointHighlightStroke : "rgba(151,187,205,1)",
-					data: [50,75,250,320,345,425,450,500,]
+					data: [75,310,320,344,430,432,450,500,]
 					/*data : [randomScalingFactor(),randomScalingFactor(),randomScalingFactor(),randomScalingFactor(),randomScalingFactor(),randomScalingFactor(),randomScalingFactor()]*/
 				}			]
 		}
