--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
 
 			<!-- Email -->
 			<div class="email">
-				<p><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>Email : <a href="mailto:mail@forgewell.net">marketing@forgewell.net</a></p>
+				<p><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>Email : <a href="mailto:marketing@forgewell.net">marketing@forgewell.net</a></p>
 			</div>
 			<!-- //Email -->
 
@@ -183,7 +183,7 @@
 			<div class="col-md-4 col-sm-4 why-us-grid">
 				<h3 style="color:#B94239">Who We Are</h3>
 				<p style="color: #F94607;font-size: 18px;"> ISO 9001:2008 certified company</p>
-				<p class="bottom" style="color: #333333; font-size: 14px; text-align:justify">We started in the year 2010. We established our niche in Forging. We cater Automobile, Infrastructure, Defence, OIL & GAS, Cement, Mining, Nuclear, Power Generation, Tramissoin, Crane, Heavy industrial equipment’s, Gear Box Manufacturing Industries.
+				<p class="bottom" style="color: #333333; font-size: 14px; text-align:justify">We started in the year 2010. We established our niche in Forging. We cater Automobile, Infrastructure, Defence, OIL & GAS, Cement, Mining, Nuclear, Power Generation, Transmission, Crane, Heavy industrial equipment’s, Gear Box Manufacturing Industries.
 			</p>
 			</div>
 			<div class="col-md-4 col-sm-4 why-us-grid">
@@ -234,7 +234,7 @@
 			<div class="col-md-6 col-sm-6 locations-info">
 				<h3 style="color:#B94239">Clients</h3>
 				<p>At Forgewell, quality and customer focus is of utmost importance. We strongly believe in providing total customer satisfaction through excellence in product & process development, building quality into the process, proactive approach to quality issues, quick response to customer, cutting-edge technology & price competitiveness.</p>
-				<a href="./client.html">Client List <span class="glyphicon glyphicon-arrow-right" aria-hidden="true"></span></a>
+				<a href="./clients.html">Client List <span class="glyphicon glyphicon-arrow-right" aria-hidden="true"></span></a>
 			</div>
 			<div class="col-md-6 col-sm-6 locations-image">
 				<img src="images/location.jpg" alt="Forgewell Industries">
