--- a/products.html
+++ b/products.html
@@ -54,7 +54,7 @@
 
 			<!-- Email -->
 			<div class="email">
-				<p><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>Email : <a href="mailto:mail@forgewell.net">marketing@forgewell.net</a></p>
+				<p><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>Email : <a href="mailto:marketing@forgewell.net">marketing@forgewell.net</a></p>
 			</div>
 			<!-- //Email -->
 
