--- a/products.html
+++ b/products.html
@@ -60,7 +60,7 @@
 
 			<!-- Phone -->
 			<div class="phone">
-				<p><span class="glyphicon glyphicon-earphone" aria-hidden="true"></span>Phone : <a href="#">+91 98224 95724</a></p>
+				<p><span class="glyphicon glyphicon-earphone" aria-hidden="true"></span>Phone : <a href="tel:+91 98224 95724">+91 98224 95724</a></p>
 			</div>
 			<!-- //Phone -->
 			<div class="clearfix"></div>
