--- a/contact.html
+++ b/contact.html
@@ -169,7 +169,15 @@
 					<div class="clearfix"> </div>
 				</div>
 
-				<input type="submit" class="more_btn" value="Send Message">
+				<!--<input type="submit" class="more_btn" value="Send Message">-->
+				<!--added new-->
+				<p><button name="submit" type="submit" class="btn btn-theme btn-block" 
+					   data-error-message="Error!" data-sending-message="Message Sent" 
+					   data-ok-message="Message Sent">
+					<i class="fa fa-location-arrow"></i>Send Message</button>
+				</p>
+				<input type="hidden" name="submitted" id="submitted" value="true" />
+				<!--added new END-->
 			</form>
 		</div>
 	</div>
