--- a/contact.html
+++ b/contact.html
@@ -176,7 +176,7 @@
 					   data-ok-message="Message Sent">
 					<i class="fa fa-location-arrow"></i>Send Message</button>
 				</p>
-				<input type="hidden" name="submitted" id="submitted" value="true" />
+				<input type="hidden" name="action" value="1" />
 				<!--added new END-->
 			</form>
 		</div>
