--- a/contact.html
+++ b/contact.html
@@ -159,7 +159,7 @@
 				<div class="message">
 					<div class="col-md-6 col-sm-6 grid_6 c1">
 						<input type="text" class="text" name="nam" placeholder="Name" required >
-						<input type="text" class="text" name="mail" placeholder="Email" required >
+						<input type="email" class="text" name="mail" placeholder="Email" required >
 						<input type="text" class="text" name="phno" placeholder="Phone" required >
 					</div>
 
