--- a/contact.html
+++ b/contact.html
@@ -161,7 +161,7 @@
 					<div class="col-md-6 col-sm-6 grid_6 c1">
 						<input type="text" class="text" name="nam" placeholder="Name" required >
 						<input type="text" class="text" name="mail" placeholder="Email" required >
-						<input type="text" class="text" name="phno" placeholder="Phone" required >
+						<input type="number" class="text" name="phno" placeholder="Phone" required >
 					</div>
 
 					<div class="col-md-6 col-sm-6 grid_6 c1">
@@ -338,6 +338,7 @@
 	<script>
 	function validateForm() {
 	    var x = document.forms["myForm"]["mail"].value;
+	    //var ph = document.forms["myForm"]["phno"].value;
 	    var atpos = x.indexOf("@");
 	    var dotpos = x.lastIndexOf(".");
 	    if (atpos<1 || dotpos<atpos+2 || dotpos+2>=x.length) {
