--- a/contact.html
+++ b/contact.html
@@ -343,7 +343,7 @@
 	    var atpos = x.indexOf("@");
 	    var dotpos = x.lastIndexOf(".");
 	    if (atpos<1 || dotpos<atpos+2 || dotpos+2>=x.length) {
-		var msg ="Not a valid e-mail address";
+		var msg ="Not a valid e-mail address" + ph.value.match(phoneno);
 		alert(msg);
 		return false;
 	    }
