--- a/contact.html
+++ b/contact.html
@@ -357,8 +357,9 @@
 	    } else {
 		document.getElementById('phnoErrorMsg').style.display = 'none';
 	    }
-	
-	    return true;
+		document.getElementById('phnoErrorMsg').style.display = 'none';
+		document.getElementById('phnoErrorMsg').innerHTML = ph.match(phoneno);
+	    return false;
 		
 	}
 	</script>
