--- a/contact.html
+++ b/contact.html
@@ -359,7 +359,7 @@
 	    }
 		document.getElementById('phnoErrorMsg').style.display = 'none';
 		document.getElementById('phnoErrorMsg').innerHTML = ph.match(phoneno);
-	    return false;
+	    return true;
 		
 	}
 	</script>
