--- a/contact.html
+++ b/contact.html
@@ -344,23 +344,24 @@
 	    var phoneno = /^\d{10}$/;
 	    var atpos = x.indexOf("@");
 	    var dotpos = x.lastIndexOf(".");
-	    var flag=0;
+	    var flag1=0;
+	    var flag2=0;
 	    if (atpos<1 || dotpos<atpos+2 || dotpos+2>=x.length) {
 		//var msg ="Not a valid e-mail address" + ph.value.match(phoneno);
 		document.getElementById('emailErrorMsg').style.display = 'block';
-		flag=1;
+		flag1=1;
 	    } else {
 		document.getElementById('emailErrorMsg').style.display = 'none';
-		flag=0;
+		flag1=0;
 	    }
 	    if(!ph.match(phoneno)) {
 		document.getElementById('phnoErrorMsg').style.display = 'block';
-		flag=1;
+		flag2=1;
 	    } else {
 		document.getElementById('phnoErrorMsg').style.display = 'none';
-		flag=0;
+		flag2=0;
 	    }
-	    if(flag==1) {
+	    if(flag1==1 || flag2==1) {
 		    return false;
 	    } else {
 	    	return true;
