--- a/contact.html
+++ b/contact.html
@@ -161,7 +161,7 @@
 					<div class="col-md-6 col-sm-6 grid_6 c1">
 						<input type="text" class="text" name="nam" placeholder="Name" required >
 						<input type="text" class="text" name="mail" placeholder="Email" required >
-						<div id="emailErrorMsg" style="display:none"> invalid email</div>
+						<div style="text-align:right; color:red" id="emailErrorMsg" style="display:none"> invalid email</div>
 						<input type="text" class="text" name="phno" placeholder="Phone" required >
 						<div id="phnoErrorMsg" style="display:none"> invalid phone number</div>
 					</div>
