--- a/contact.html
+++ b/contact.html
@@ -161,7 +161,7 @@
 					<div class="col-md-6 col-sm-6 grid_6 c1">
 						<input type="text" class="text" name="nam" placeholder="Name" required >
 						<input type="text" class="text" name="mail" placeholder="Email" required >
-						<div id="emailErrorMsg" class="text" style="display:none;text-align:right;color:red;"> invalid email</div>
+						<p><div id="emailErrorMsg" style="display:none;text-align:right;color:red;"> invalid email</div></p>
 						<input type="text" class="text" name="phno" placeholder="Phone" required >
 						<div id="phnoErrorMsg" class="text" style="display:none;text-align:right;color:red;"> invalid phone number</div>
 					</div>
