--- a/contact.html
+++ b/contact.html
@@ -161,9 +161,9 @@
 					<div class="col-md-6 col-sm-6 grid_6 c1">
 						<input type="text" class="text" name="nam" placeholder="Name" required >
 						<input type="text" class="text" name="mail" placeholder="Email" required >
-						<div id="emailErrorMsg" class="about-us-info-text" style="display:none;text-align:right;color:red;">*Invalid email id</div>
+						<div id="emailErrorMsg" class="about-us-info-text" style="display:none;text-align:right;color:red;margin-top: -12px">*Invalid email id</div>
 						<input type="text" class="text" name="phno" placeholder="Phone" required >
-						<div id="phnoErrorMsg" class="about-us-info-text" style="display:none;text-align:right;color:red;">*Invalid phone number</div>
+						<div id="phnoErrorMsg" class="about-us-info-text" style="display:none;text-align:right;color:red;margin-top: -12px">*Invalid phone number</div>
 					</div>
 
 					<div class="col-md-6 col-sm-6 grid_6 c1">
