--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 	<meta name="keywords" content="Forgewell Industries Forging Company in pune, Best_forging_company_in_Pune" />
 	<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
 <!-- //For-Mobile-Apps -->
-
+<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+<link rel="icon" href="/favicon.ico" type="image/x-icon">
 <!-- Custom-Theme-Files -->
 	<!-- Bootstrap-Core-CSS --> <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" media="all" />
 	<!-- Navigation.CSS --> <link rel="stylesheet" href="css/navigation.css" type="text/css" media="all" />
